added fullscreen. Removed sound in css

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ Many thanks again!
 <script src="js/lib/tweenjs-0.6.2.min.js?v11"></script>
 <script>Ticker.framerate=60; Ticker.paused=true;</script>
 <script src="js/lib/sharing.js?v11"></script>
+<script src="js/lib/screenfull.js?v11"></script>
+
 
 
 <!-- Core Engine -->
