--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
-	<!--  <meta name="viewport" content="width=device-width, maximum-scale=10.0, minimum-scale=.1, user-scalable=yes"/> -->
+
+	 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10.0, minimum-scale=.1, user-scalable=yes"/> 
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
