--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=0.5 maximum-scale=10.0, minimum-scale=0.1, user-scalable=yes"/>  -->
 	<link rel="icon" type="image/png" href="favicon.png">
 
